@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-03-24T08:20:42Z",
-  "count_outdated" : 477,
-  "uniques_outdated" : 254,
+  "timestamp" : "2022-03-27T01:18:57Z",
+  "count_outdated" : 479,
+  "uniques_outdated" : 255,
   "count" : 1158,
   "uniques" : 302,
   "clones" : [
-    {
-      "timestamp": "2022-03-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-03-14T00:00:00Z",
       "count": 2,
