@@ -1,12 +1,7 @@
 {
-  "count": 681,
+  "count": 679,
   "uniques": 30,
   "clones": [
-    {
-      "timestamp": "2022-03-12T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-14T00:00:00Z",
       "count": 2,
