@@ -1,6 +1,12 @@
+2022-03-27T01:18:57Z:
+* notice: last 14d: all unq: 679 30
+* notice: prev accum: outdated-all outdated-unq / all unq: 477 254 / 1158 302
+* notice: next accum: outdated-all outdated-unq / all unq: 479 255 / 1158 302
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-03-24T08:20:42Z:
 * notice: prev accum: outdated-all outdated-unq / all unq: 475 253 / 1156 301
 * notice: last 14d: all unq: 681 30
 * notice: next accum: outdated-all outdated-unq / all unq: 477 254 / 1158 302
 * notice: prev json diff: unq all: +1 +2 / -0 -0
-* notice: prev day diff: unq all: +1 +2 / -0 -0
+* notice: prev day diff: unq all: +1 +2 / -0 -0
